--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "colors": "^1.1.2",
+    "commander": "^2.9.0",
     "pad": "^1.1.0",
     "shelljs": "^0.7.7",
     "uuid": "^3.0.1"
